[gd_scene load_steps=4 format=3 uid="uid://du4taax6rx515"]

[ext_resource type="Script" uid="uid://cdie33068l1lr" path="res://Script/UI/ui.gd" id="1_ahcct"]

[sub_resource type="LabelSettings" id="LabelSettings_ahcct"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_de23q"]
font_size = 25

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ahcct")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 593.0
offset_top = 77.0
offset_right = 754.0
offset_bottom = 100.0
text = "Ejemplo"
label_settings = SubResource("LabelSettings_ahcct")

[node name="HighScoreLabel" type="Label" parent="."]
offset_left = 596.0
offset_top = 34.0
offset_right = 763.0
offset_bottom = 57.0
text = "Ejemplo"
label_settings = SubResource("LabelSettings_de23q")

[node name="GroundedObjectsLabel" type="Label" parent="."]
offset_left = 550.0
offset_top = 139.0
offset_right = 744.0
offset_bottom = 162.0
text = "Objetos en el suelo : 0/10"
